--- a/.github/workflows/update-contributors-details.yml
+++ b/.github/workflows/update-contributors-details.yml
@@ -2,10 +2,8 @@ name: update-contributor-details
 
 on:
   pull_request_target:
-    types:
-      - closed
-    branches:
-      - main
+    types: [closed]
+    branches: [main]
 
 env:
   REPO_NAME: ${{ github.repository }}
