--- a/.github/workflows/javascript-linter.yml
+++ b/.github/workflows/javascript-linter.yml
@@ -34,16 +34,18 @@ jobs:
           {
             "root": true,
             "env": {
-              "browser": true,
-              "es2021": true,
-              "node": true
+            "browser": true,
+            "es2021": true,
+            "node": true
             },
             "extends": "eslint:recommended",
             "parserOptions": {
               "ecmaVersion": "latest",
               "sourceType": "module"
-            }
+            },
+            "ignorePatterns": ["**/*.min.js"]
           }
+
 
     - name: eslint
       run: |
