--- a/.github/workflows/javascript-linter.yml
+++ b/.github/workflows/javascript-linter.yml
@@ -17,13 +17,13 @@ jobs:
     - name: Setting up Node.js environment
       uses: actions/setup-node@v3.8.1
       with:
-        node-version: 18
+        node-version: 20
 
     - name: Setting up eslint
       run: |
         npm init -y
-        npm install eslint --save-dev
-        touch .eslintrc.json
+        npm install eslint @eslint/js globals --save-dev
+        touch eslint.config.cjs
 
     - name: Adding eslint configurations
       uses: DamianReeves/write-file-action@v1.2
@@ -31,25 +31,31 @@ jobs:
         path: .eslintrc.json
         write-mode: overwrite
         contents: |
-          {
-            "root": true,
-            "env": {
-            "browser": true,
-            "es2021": true,
-            "node": true
+          const js = require('@eslint/js');
+          const globals = require('globals');
+
+          module.exports = [
+            {
+              ignores: ['**/*.min.js'],
             },
-            "extends": "eslint:recommended",
-            "parserOptions": {
-              "ecmaVersion": "latest",
-              "sourceType": "module"
+            js.configs.recommended,
+            {
+              languageOptions: {
+                ecmaVersion: 'latest',
+                sourceType: 'module',
+                globals: {
+                  ...globals.browser,
+                  ...globals.es2021,
+                  ...globals.node,
+                },
+              },
+              rules: {
+                'no-undef': 'off',
+                'no-unused-vars': 'off',
+              },
             },
-            "rules": {
-              "no-undef": "off",
-              "no-unused-vars": "off"
-            },
-            "ignorePatterns": ["**/*.min.js"]
-          }
+          ];
 
     - name: eslint
       run: |
-        npx eslint ./ */**.js
+        npx eslint .
